# the-hunt

./: .gitignore  CMakeLists.txt
include/: application.h  applicationbuilder.h  applicationlifecycle.h  dictionary.h  framebuffer.h  hash.h  servicecollection.h  serviceprovider.h  softwarerenderer.h  window.h
source/: main.c
source/algorithms/: hash.c
source/datastructures/: dictionary.c
source/engine/: application.c  applicationbuilder.c  applicationlifecycle.c  framebuffer.c  servicecollection.c  serviceprovider.c  softwarerenderer.c  window.c
